package(default_visibility = ["//visibility:public"])

WATCHMAN_SRCS = [
    "ChildProcess.cpp",
    "Client.cpp",
    "Clock.cpp",
    "Command.cpp",
    "CommandRegistry.cpp",
    "Connect.cpp",
    "ContentHash.cpp",
    "CookieSync.cpp",
    "Errors.cpp",
    "FlagMap.cpp",
    "GroupLookup.cpp",
    "IgnoreSet.cpp",
    "InMemoryView.cpp",
    "LogConfig.cpp",
    "Logging.cpp",
    "Options.cpp",
    "PDU.cpp",
    "PathUtils.cpp",
    "PendingCollection.cpp",
    "PerfSample.cpp",
    "Poison.cpp",
    "ProcessLock.cpp",
    "ProcessUtil.cpp",
    "PubSub.cpp",
    "QueryableView.cpp",
    "SanityCheck.cpp",
    "Shutdown.cpp",
    "SignalHandler.cpp",
    "SymlinkTargets.cpp",
    "ThreadPool.cpp",
    "TriggerCommand.cpp",
    "UserDir.cpp",
    "WatchmanConfig.cpp",
    "XattrUtils.cpp",
    "bser.cpp",
    "cmds/debug.cpp",
    "cmds/find.cpp",
    "cmds/info.cpp",
    "cmds/log.cpp",
    "cmds/query.cpp",
    "cmds/since.cpp",
    "cmds/state.cpp",
    "cmds/subscribe.cpp",
    "cmds/trigger.cpp",
    "cmds/watch.cpp",
    "fs/FSDetect.cpp",
    "fs/FileDescriptor.cpp",
    "fs/FileInformation.cpp",
    "fs/FileSystem.cpp",
    "fs/ParallelWalk.cpp",
    "fs/Pipe.cpp",
    "fs/UnixDirHandle.cpp",
    "fs/WinDirHandle.cpp",
    "fs/WindowsTime.cpp",
    "listener-user.cpp",
    "listener.cpp",
    "main.cpp",
    "portability/Backtrace.cpp",
    "portability/PosixSpawn.cpp",
    "portability/WinError.cpp",
    "query/FileResult.cpp",
    "query/GlobEscaping.cpp",
    "query/GlobTree.cpp",
    "query/LocalFileResult.cpp",
    "query/Query.cpp",
    "query/QueryContext.cpp",
    "query/QueryResult.cpp",
    "query/TermRegistry.cpp",
    "query/base.cpp",
    "query/dirname.cpp",
    "query/empty.cpp",
    "query/eval.cpp",
    "query/fieldlist.cpp",
    "query/glob.cpp",
    "query/intcompare.cpp",
    "query/match.cpp",
    "query/name.cpp",
    "query/parse.cpp",
    "query/pcre.cpp",
    "query/since.cpp",
    "query/suffix.cpp",
    "query/type.cpp",
    "root/ageout.cpp",
    "root/dir.cpp",
    "root/file.cpp",
    "root/init.cpp",
    "root/iothread.cpp",
    "root/notifythread.cpp",
    "root/reap.cpp",
    "root/resolve.cpp",
    "root/sync.cpp",
    "root/threading.cpp",
    "root/warnerr.cpp",
    "root/watchlist.cpp",
    "saved_state/LocalSavedStateInterface.cpp",
    "saved_state/SavedStateFactory.cpp",
    "saved_state/SavedStateInterface.cpp",
    "scm/Git.cpp",
    "scm/Mercurial.cpp",
    "scm/SCM.cpp",
    "sockname.cpp",
    "state.cpp",
    "stream.cpp",
    "stream_stdout.cpp",
    "stream_unix.cpp",
    "stream_win.cpp",
    "string.cpp",
    "telemetry/LogEvent.cpp",
    "telemetry/WatchmanStats.cpp",
    "telemetry/WatchmanStructuredLogger.cpp",
    "thirdparty/getopt/GetOpt.cpp",
    "thirdparty/jansson/dump.cpp",
    "thirdparty/jansson/error.cpp",
    "thirdparty/jansson/load.cpp",
    "thirdparty/jansson/strconv.cpp",
    "thirdparty/jansson/utf.cpp",
    "thirdparty/jansson/value.cpp",
    "thirdparty/wildmatch/wildmatch.c",
    "watcher/Watcher.cpp",
    "watcher/WatcherRegistry.cpp",
    "watcher/fsevents.cpp",
    "watcher/inotify.cpp",
    "watcher/kqueue.cpp",
    "watcher/kqueue_and_fsevents.cpp",
    "watcher/portfs.cpp",
    "watcher/win32.cpp",
]

cc_library(
    name = "config_h",
    hdrs = select({
        "//bazel/platforms:linux": ["config/linux/config.h"],
        "//bazel/platforms:macos": ["config/macos/config.h"],
    }),
    include_prefix = "watchman",
    strip_include_prefix = select({
        "//bazel/platforms:linux": "config/linux",
        "//bazel/platforms:macos": "config/macos",
    }),
)

cc_binary(
    name = "watchman",
    srcs = WATCHMAN_SRCS + glob(
        ["**/*.h"],
        exclude = ["thirdparty/deelevate_binding/**"],
    ),
    copts = [
        "-Wall",
        "-Wextra",
        "-DGLOG_NO_ABBREVIATED_SEVERITIES",
        "-I.",
    ] + select({
        "//bazel/platforms:linux": ["-pthread"],
        "//conditions:default": [],
    }),
    linkopts = select({
        "//bazel/platforms:linux": ["-pthread"],
        "//bazel/platforms:macos": [
            "-framework",
            "CoreServices",
        ],
    }),
    linkstatic = False,
    deps = [
        ":config_h",
        "//watchman/bazel/eden:compat",
        "@fmt",
        "@folly//folly:exception",
        "@folly//folly:exception_string",
        "@folly//folly:exception_wrapper",
        "@folly//folly:executor",
        "@folly//folly:fbstring",
        "@folly//folly:file_util",
        "@folly//folly:map_util",
        "@folly//folly:network_address",
        "@folly//folly:overload",
        "@folly//folly:portability",
        "@folly//folly:range",
        "@folly//folly:scope_guard",
        "@folly//folly:singleton",
        "@folly//folly:stop_watch",
        "@folly//folly:string",
        "@folly//folly:subprocess",
        "@folly//folly:synchronized",
        "@folly//folly:thread_local",
        "@folly//folly:unit",
        "@folly//folly/chrono:conv",
        "@folly//folly/concurrency:unbounded_queue",
        "@folly//folly/concurrency/container:lock_free_ring_buffer",
        "@folly//folly/debugging/symbolizer",
        "@folly//folly/executors:cpu_thread_pool_executor",
        "@folly//folly/futures:core",
        "@folly//folly/init",
        "@folly//folly/net:network_socket",
        "@folly//folly/portability:event",
        "@folly//folly/portability:fcntl",
        "@folly//folly/portability:filesystem",
        "@folly//folly/portability:sockets",
        "@folly//folly/portability:sys_mman",
        "@folly//folly/portability:sys_stat",
        "@folly//folly/portability:sys_time",
        "@folly//folly/portability:sys_types",
        "@folly//folly/portability:unistd",
        "@folly//folly/portability:windows",
        "@folly//folly/system:hardware_concurrency",
        "@folly//folly/system:shell",
        "@folly//folly/system:thread_name",
        "@glog",
    ] + select({
        "//bazel/platforms:linux": ["@openssl//:crypto"],
        "//conditions:default": [],
    }),
)
