[package]
name = "serde_bser"
version = "0.1.0"
authors = ["Rain <rain1@fb.com>"]
edition = "2018"

[dependencies]
byteorder = "1.0"
bytes = "0.4"
error-chain = "*"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"

[features]
default = []
debug_bytes = []

[dev-dependencies]
maplit = "1.0"
