[package]
name = "watchman_client"
version = "0.2.0"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/facebook/watchman/"
description = "a client for the Watchman file watching service"
license = "Apache-2.0"
documentation = "https://docs.rs/watchman_client"

[dev-dependencies]
structopt = "0.3"

[dependencies]
maplit = "1.0"
serde = { version = "1", features = ["derive"] }
serde_bser = { version = "0.2", path = "../serde_bser" }
thiserror = ">=1.0.6"
tokio = {version="0.2.0-alpha.6", features=["process"]}
tokio-net = {version="0.2.0-alpha.6"}
tokio-io = {version="0.2.0-alpha.6"}
serde_with_macros = "1.0"

[target."cfg(windows)".dependencies]
mio-named-pipes = "0.1"
mio = "0.6"
winapi = { version = "0.3", features = [
    "handleapi",
    "winuser",
]}
