[package]
name = "serde_bser"
version = "0.3.1"
authors = ["Rain <rain1@fb.com>", "Wez Furlong"]
edition = "2018"
repository = "https://github.com/facebook/watchman/"
description = "Implements the Watchman BSER encoding for serde. https://facebook.github.io/watchman/docs/bser.html"
license = "Apache-2.0"
documentation = "https://docs.rs/serde_bser"

[dependencies]
anyhow = "1.0"
byteorder = "1.0"
bytes = "0.4"
thiserror = "1.0"
serde = { version = "1.0.102", features = ["derive"] }

[features]
default = []
debug_bytes = []

[dev-dependencies]
maplit = "1.0"
serde_bytes = "0.11"
