[package]
name = "watchman_client"
version = "0.6.1"
authors = ["Wez Furlong"]
edition = "2018"
repository = "https://github.com/facebook/watchman/"
description = "a client for the Watchman file watching service"
license = "Apache-2.0"
documentation = "https://docs.rs/watchman_client"
exclude = [
    "examples/*",
]

[dev-dependencies]
structopt = "0.3"

[dependencies]
maplit = "1.0"
futures = { version = "0.3.13", features = ["async-await", "compat"] }
bytes = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_bser = { version = "0.2", path = "../serde_bser" }
thiserror = ">=1.0.6"
tokio = { version = "1.5", features = ["full", "test-util"] }
tokio-util = { version = "0.6", features = ["full"] }

[target."cfg(windows)".dependencies]
mio-named-pipes = "0.1"
mio = "0.6"
winapi = { version = "0.3", features = [
    "handleapi",
    "winuser",
]}
