[package]
name = "watchman_client"
version = "0.7.1"
authors = ["Wez Furlong"]
edition = "2018"
description = "a client for the Watchman file watching service"
documentation = "https://docs.rs/watchman_client"
repository = "https://github.com/facebook/watchman/"
license = "Apache-2.0"
exclude = ["examples/*"]

[dependencies]
anyhow = "1.0"
maplit = "1.0"
futures = { version = "0.3.13", features = ["async-await", "compat"] }
bytes = { version = "1.0", features = ["serde"] }
serde = { version = "1.0.102", features = ["derive"] }
serde_bser = { version = "0.3", path = "../serde_bser" }
thiserror = ">=1.0.6"
tokio = { version = "1.5", features = ["full", "test-util"] }
tokio-util = { version = "0.6", features = ["full"] }

[dev-dependencies]
structopt = "0.3"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["handleapi", "winuser"] }
